added . infront of /assets/pokeball.png

--- a/style.css
+++ b/style.css
@@ -4,7 +4,7 @@
 }
 
 #pokeballBullet{
-  background: url('/assets/pokeball.png') no-repeat left top;
+  background: url('./assets/pokeball.png') no-repeat left top;
   padding: 10px 10px;
 }
 
